[package]
name = "ic-agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.30"
serde = { version = "1.0.136", features = ["derive"] }
serde_bytes = "0.11.2"
serde_cbor = "0.11.2"
sha2 = "0.10"
ic-types = "0.3.0"
hex = "0.4.0"
leb128 = "0.2.5"
candid = "0.7.10"
anyhow = "1.0.56"